cmake_minimum_required(VERSION 3.15)
project(libmoonage)

set(CMAKE_CXX_STANDARD 20)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost 1.72.0)
include_directories(${Boost_INCLUDE_DIRS})

set(LLVM_LIB_DEPS LLVMX86AsmPrinter LLVMX86AsmParser)
find_package(llvm 9.0.1 REQUIRED CONFIG)
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
message("${LLVM_INCLUDE_DIRS}")
#add_definitions(-fsanitize=address)

IF(SIMBUILD MATCHES true)
    set(CMAKE_CXX_VISIBILITY_PRESET hidden)
    set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator13.2.sdk")
    set(CMAKE_OSX_DEPLOYMENT_TARGET "" CACHE STRING "Empty for iOS" FORCE)
ENDIF()
set(CMAKE_CXX_FLAGS "-Wno-deprecated-declarations")

add_library(moonage SHARED disassembler.generated.cpp common.h interpreter.generated.cpp interpreter.cpp interpreter.h state.h recompiler.generated.cpp recompiler.h runtimeValue.cpp runtimeValue.h recompiler.cpp property.h cacheManager.cpp cacheManager.h interface.h interface.cpp)
target_link_options(moonage PUBLIC -fvisibility=hidden)
llvm_config(moonage core support mc mcjit native nativecodegen target)

IF(NOT (SIMBUILD MATCHES true))
    add_subdirectory("${PROJECT_SOURCE_DIR}/TestApp" "${PROJECT_SOURCE_DIR}/TestApp_output")
    add_subdirectory("${PROJECT_SOURCE_DIR}/UnitTests" "${PROJECT_SOURCE_DIR}/UnitTests_output")
    add_subdirectory("${PROJECT_SOURCE_DIR}/ComprehensiveTests" "${PROJECT_SOURCE_DIR}/ComprehensiveTests_output")
ENDIF()